--- a/public/devleop.html
+++ b/public/devleop.html
@@ -12,10 +12,15 @@
     <div class="main">
         <div class="image">
             <img src="profile-pic.png" alt="" srcset="">
+            <h3>Harsh Kumar</h3>
+            <img src="ishan.jpg" alt="" srcset="">
+            <h3>Ishan Singh</h3>
+            <img src="faiz.jpg" alt="" srcset="">
+            <h3>Md. faizan Firoz</h3>
         </div>
         <div class="all">
             <div class="name">
-                <h3>Hey! I'm Harsh Kumar</h3>
+                
             </div>
             <div class="para">
                 <p>This project focuses on developing a web-based project management tool to facilitate efficient <br>
